fix(top-bar): replace margin with gap for overflow-itemss (#DS-5023)

--- a/packages/components/top-bar/top-bar.scss
+++ b/packages/components/top-bar/top-bar.scss
@@ -3,21 +3,7 @@
 
 @mixin _overflow-items-margins {
     padding: var(--kbq-size-border-width);
-
-    > .kbq-overflow-item {
-        &:not(:last-of-type) {
-            margin-right: var(--kbq-top-bar-container-end-gap);
-        }
-
-        // apply margin if the last item needs to be alwaysVisible
-        &:last-of-type:is(.kbq-overflow-item_always-visible) + .kbq-overflow-items-result {
-            margin-left: var(--kbq-top-bar-container-end-gap);
-        }
-    }
-
-    .kbq-overflow-items-result:first-child {
-        margin-right: var(--kbq-top-bar-container-end-gap);
-    }
+    gap: var(--kbq-top-bar-container-end-gap);
 }
 
 .kbq-top-bar {
@@ -53,10 +39,6 @@
             margin-bottom: calc(-1 * var(--kbq-size-border-width));
         }
 
-        .kbq-overflow-items {
-            @include _overflow-items-margins;
-        }
-
         &.kbq-top-bar-container__start {
             display: flex;
             gap: var(--kbq-top-bar-container-start-gap);
@@ -71,10 +53,8 @@
             justify-content: end;
         }
 
-        &.kbq-top-bar-container__with-overflow-items {
-            gap: unset;
-            justify-content: unset;
-
+        &.kbq-overflow-items,
+        > .kbq-overflow-items {
             @include _overflow-items-margins;
         }
     }
